Creando el componente incrementador

--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,43 @@
-<p>
-  progress works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Barra de Progreso</h4>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+          [attr.ariaValuenow]="progreso" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" 
+          [style.width]="progreso+'%'"></div>
+        </div>
+        <div class="progress mt-2">
+          <div class="progress-bar progress-bar-striped bg-warning progress-bar-animated" role="progressbar" 
+          [attr.ariaValuenow]="progreso" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" 
+          [style.width]="progreso+'%'"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-incrementador nombre="Progress Azul"></app-incrementador>
+        
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        
+        <app-incrementador nombre="Progress Amarillo" [progreso]="20"></app-incrementador>
+
+      </div>
+    </div>
+  </div>
+
+</div>
